# narrative-systems

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: ai-harness.md  index.md  working-vocabulary.md
examples/: basic_system.py  predictive_history_system.py
historical-entropy/: README.md  system-model.md
narrative-geopolitics/: README.md
predictive-history/: README.md  system-model.md
scripts/: audit_ai_harness.py  audit_channel_index.py  audit_codex_skills_sync.py  backfill_section_list.py  bootstrap_daily_run.py  build_retrospective_runs.py  build_statecraft_backfill_outputs.py  cadence.py  canonicalize_voice_metadata.py  check_codex_skills_sync.py  closeout_best_intake.py  codex_skill_registry.py  continuity.py  demo_daily_runs.py  forecast_ledger.py  geo_synthesis.py  geopolitical_synthesis.py  import_aguilar_from_strategy.py  import_barnes_from_strategy.py  import_baud_from_strategy.py  import_blumenthal_from_strategy.py  import_crooke_from_strategy.py  import_freeman_from_strategy.py  import_helmer_from_strategy.py  import_hoh_from_strategy.py  import_jermy_from_strategy.py  import_karaganov_from_strategy.py  import_krainer_from_strategy.py  import_martyanov_from_strategy.py  import_mate_from_strategy.py  import_matlock_from_strategy.py  import_mcgovern_from_strategy.py  import_parsi_from_strategy.py  import_postol_from_strategy.py  import_ritter_from_strategy.py  import_sachs_from_strategy.py  import_weichert_from_strategy.py  import_wilkerson_from_strategy.py  land_best_intake.py  migrate_voice_role_overrides.py  (+22 more)
tests/: test_ai_harness.py  (+22 more)
(+2764 files in other folders)
