[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "narrative-systems"
version = "0.1.0"
description = "An archive-first geopolitical research workbench."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Robert Kuhne" }
]
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
